--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vue_multiple",
+  "name": "xcx_app_vue_mul",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "Kaier_Chou <469439801@qq.com>",
+  "author": "kaier_chou <469439801@qq.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -10,7 +10,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "less": "^3.7.1",
+    "less-loader": "^4.1.0",
+    "lib-flexible": "^0.3.2",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -21,7 +25,6 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
@@ -36,8 +39,10 @@
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
+    "postcss-loader": "^2.1.6",
+    "postcss-px2rem": "^0.3.0",
     "postcss-url": "^7.2.1",
+    "px2rem-loader": "^0.1.9",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
@@ -58,6 +63,9 @@
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not ie <= 8"
+    "last 10 Chrome versions",
+    "last 5 Firefox versions",
+    "Safari >= 6",
+    "ie > 8"
   ]
 }
